--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --mode development",
     "build": "webpack  --mode production",
     "test": "jest --coverage",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prebuild": "npm run lint && npm t"
   },
   "jest": {
     "transform": {
