--- a/package.json
+++ b/package.json
@@ -37,19 +37,24 @@
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "css-loader": "^5.2.4",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "fibers": "^5.0.0",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^26.6.3",
     "react-test-renderer": "^17.0.2",
+    "sass": "^1.32.12",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
-    "ts-loader": "^9.1.1",
+    "ts-loader": "^8.2.0",
     "typescript": "^4.2.4",
-    "webpack": "^5.36.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
