--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "webpack serve --mode development",
     "build": "webpack  --mode production",
     "test": "jest --coverage",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "prebuild": "npm run lint && npm t",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "jest": {
+    "setupFiles": [
+      "<rootDir>/setupTests.js"
+    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
@@ -60,6 +63,7 @@
     "html-webpack-plugin": "^4.5.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
