--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "homepage": "https://github.com/rinaam/Movie-app#readme",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.15.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
