--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   },
   "homepage": "https://github.com/rinaam/Movie-app#readme",
   "dependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.15.2"
+    "react-query": "^3.15.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
