--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@svgr/webpack": "^5.5.0",
+    "@testing-library/react-hooks": "^5.1.2",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
@@ -57,6 +58,7 @@
     "@typescript-eslint/parser": "^4.22.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "dotenv": "^6.2.0",
     "eslint": "^7.25.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
